# diploma_Planner

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
docs/: README.md  (+1 more)
services/ai-layer/: Dockerfile  README.md  pyproject.toml
services/ai-layer/app/: __init__.py  bootstrap.py  config.py  dependencies.py  dtos.py  main.py
services/ai-layer/app/api/: __init__.py  capabilities.py  explanations.py
services/ai-layer/app/application/: __init__.py  explanations.py  reindex.py
services/ai-layer/app/cli/: __init__.py  reindex.py
services/ai-layer/app/infrastructure/: __init__.py
services/ai-layer/tests/: test_capabilities.py  test_clients.py  test_dependencies.py  test_explanation_service.py  test_explanations.py  test_reindex_service.py  test_repository.py
services/core-service/: Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
services/core-service/core_service/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
services/core-service/operations/: __init__.py  admin.py  ai_payloads.py  ai_views.py  approvals.py  availability.py  models.py  permissions.py  planner_client.py  serializers.py  snapshots.py  task_workflow.py  urls.py  views.py
services/core-service/operations/migrations/: 0001_initial.py  (+1 more)
services/core-service/tests/: test_auth_flow.py  test_internal_ai_api.py  test_models.py  test_rbac.py  test_smoke.py  test_user_employee_profile_sync.py
services/core-service/users/: admin.py  auth_serializers.py  auth_views.py  employee_profiles.py  models.py  permissions.py  serializers.py  urls.py  views.py
services/planner-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/planner-service/app/: config.py  internal_ai_payloads.py  main.py  planning.py  repository.py
services/planner-service/tests/: conftest.py  test_contract_compatibility.py  test_internal_ai_api.py  test_plan_run_repository.py  test_plan_run_service.py  test_plan_runs_api.py  test_planning_integration.py  test_planning_unit.py  test_sqlite_plan_run_repository.py
(+101 files in other folders)
